Replace db.cluster.role with SHOW DATABASE
db.cluster.role will be removed in Neo4j 5.0. Also, simplify some code around the call, as ha does not exist anymore.